Ordenação de listagem, criação de paginas para cada pergunta

--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -2,6 +2,7 @@
 <body>
     <%- include('./partials/navbar.ejs') %>
     <div class="container">
+        <a href="/"><button class="btn btn-danger mt-4">Voltar</button></a>
         <div class="card mt-4">
             <div class="card-header">
                 <h3>Realizar Pergunta</h3>
