--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>BEM VINDO AO SITE GUIA PERGUNTAS</h1>
+    <div class="container">
+        <hr>
+        <h1>Perguntas</h1>
+        <hr>
+        <a href="/perguntar" class="btn btn-primary">Perguntar</a>
+        <% perguntas.forEach(pergunta => { %>
+            <div class="card mt-4">
+                <div class="card-body">
+                    <h3><%=pergunta.titulo %></h3>
+                </div>
+                <div class="card-footer">
+                    <a href="pergunta/<%=pergunta.id %>"><button class="btn btn-primary">Responder</button></a>
+                </div>
+            </div>
+        <% }); %>
+    </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
