--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -17,7 +17,7 @@
                         <label class="form-label">Pergunta</label>
                         <textarea class="form-control" name="descricao" rows="3"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-success">Success</button>
+                    <button type="submit" class="btn btn-success">Perguntar</button>
                 </form>
             </div>
         </div>
